styles the page with responsive layout   screen breakpoints are 600px, 768px and 1024px where layouts are different

--- a/css-responsive-layout/index.html
+++ b/css-responsive-layout/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <!-- logo -->
       <h1>Exceptional Realty Group</h1>
 
-      <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      <nav class="nav">
+        <a href="index.html">About</a> 
+        <a href="new-properties.html">New Properties</a> 
+        <a href="real-estate-listings.html">Listings</a> 
+        <a href="market-report.html">Market Report</a> 
+        <a href="contact.html">Contact</a> 
+        <a href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
 
@@ -25,7 +32,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
-    <section id="details">
+    <section id="details" class="details">
       <div>
         <h3>Contact</h3>
         <p>
